<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="VectorDrawableCompat">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/bgHeader"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@drawable/header_3"/>

        <ImageView
            android:id="@+id/nav_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_settings"
            android:layout_alignParentRight="true"
            android:paddingRight="15dp"
            android:paddingTop="20dp"/>

        <ImageView
            android:id="@+id/circle1"
            android:layout_width="134dp"
            android:layout_height="134dp"
            android:layout_below="@+id/bgHeader"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="-80dp"
            android:layout_marginLeft="-100dp"
            android:src="@drawable/circletransparant" />

        <ImageView
            android:id="@+id/circle2"
            android:layout_width="134dp"
            android:layout_height="134dp"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="-100dp"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="50dp"
            android:src="@drawable/circletransparant" />

        <ImageView
            android:id="@+id/circle3"
            android:layout_width="182dp"
            android:layout_height="182dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="-80dp"
            android:layout_marginBottom="-30dp"
            android:src="@drawable/circle" />

        <ImageView
            android:id="@+id/circle4"
            android:layout_width="134dp"
            android:layout_height="134dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="-50dp"
            android:layout_marginBottom="-50dp"
            android:layout_toRightOf="@+id/circle3"
            android:src="@drawable/circletransparant" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:elevation="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/destination"
                    android:textColor="@color/colorOrange"
                    android:textSize="24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/list"
                    android:textColor="@color/colorWhite"
                    android:textSize="24dp"/>

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_exp"
                android:textColor="@color/colorWhite"
                android:layout_marginLeft="5dp"
                android:textSize="14dp">
            </TextView>
            <androidx.recyclerview.widget.RecyclerView
                android:paddingTop="10dp"
                android:id="@+id/recycler_view_profile_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </androidx.recyclerview.widget.RecyclerView>


        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>