<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bgHeader"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/header_1"/>
        <ImageView
            android:id="@+id/circle1"
            android:layout_width="134dp"
            android:layout_height="134dp"
            android:layout_below="@+id/bgHeader"
            android:layout_alignParentRight="true"
            android:layout_marginTop="-80dp"
            android:layout_marginRight="-100dp"
            android:src="@drawable/circletransparant" />

        <ImageView
            android:id="@+id/circle2"
            android:layout_width="134dp"
            android:layout_height="134dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="-100dp"
            android:layout_marginBottom="50dp"
            android:src="@drawable/circletransparant" />

        <ImageView
            android:id="@+id/circle3"
            android:layout_width="182dp"
            android:layout_height="182dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="-80dp"
            android:layout_marginBottom="-30dp"
            android:src="@drawable/circle" />

        <ImageView
            android:id="@+id/circle4"
            android:layout_width="134dp"
            android:layout_height="134dp"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="-50dp"
            android:layout_marginBottom="-50dp"
            android:layout_toLeftOf="@+id/circle3"
            android:src="@drawable/circletransparant" />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:elevation="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NEW"
            android:textColor="@color/colorOrange"
            android:textSize="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/destination"
            android:textColor="@color/colorWhite"
            android:textSize="24dp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_home_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal">
    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:elevation="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MOST"
            android:textColor="@color/colorOrange"
            android:textSize="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/destination"
            android:textColor="@color/black_overlay"
            android:textSize="24dp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_home_fragment1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>
    </RelativeLayout>
</ScrollView>